--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -5,10 +5,10 @@
 	<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Simple House - About Page</title>
+    <title>A propos</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" />
-    <link href="css/all.min.css" rel="stylesheet" />
-	<link href="css/templatemo-style.css" rel="stylesheet" />
+    <link href="/static/css/all.min.css" rel="stylesheet" />
+	<link href="/static/css/templatemo-style.css" rel="stylesheet" />
 </head>
 <!--
 
@@ -17,29 +17,29 @@ Simple House
 https://templatemo.com/tm-539-simple-house
 
 -->
-<body> 
+<body>
 
 	<div class="container">
 	<!-- Top box -->
 		<!-- Logo & Site Name -->
 		<div class="placeholder">
-			<div class="parallax-window" data-parallax="scroll" data-image-src="img/simple-house-01.jpg">
+			<div class="parallax-window" data-parallax="scroll" data-image-src="/static/img/simple-house-01.jpg">
 				<div class="tm-header">
 					<div class="row tm-header-inner">
 						<div class="col-md-6 col-12">
-							<img src="img/simple-house-logo.png" alt="Logo" class="tm-site-logo" /> 
+							<img src="/static/img/simple-house-logo.png" alt="Logo" class="tm-site-logo" />
 							<div class="tm-site-text-box">
-								<h1 class="tm-site-title">Simple House</h1>
-								<h6 class="tm-site-description">new restaurant template</h6>	
+								<h1 class="tm-site-title">Mon Restaurant</h1>
+								<h6 class="tm-site-description">new restaurant template</h6>
 							</div>
 						</div>
 						<nav class="col-md-6 col-12 tm-nav">
 							<ul class="tm-nav-ul">
-								<li class="tm-nav-li"><a href="index.html" class="tm-nav-link">Home</a></li>
-								<li class="tm-nav-li"><a href="about.html" class="tm-nav-link active">About</a></li>
-								<li class="tm-nav-li"><a href="contact.html" class="tm-nav-link">Contact</a></li>
+								<li class="tm-nav-li"><a href="/" 				class="tm-nav-link">       Accueil </a></li>
+								<li class="tm-nav-li"><a href="/a-propos" class="tm-nav-link active">A propos</a></li>
+								<li class="tm-nav-li"><a href="/contact"  class="tm-nav-link">			 Contact </a></li>
 							</ul>
-						</nav>	
+						</nav>
 					</div>
 				</div>
 			</div>
@@ -47,33 +47,52 @@ https://templatemo.com/tm-539-simple-house
 
 		<main>
 			<header class="row tm-welcome-section">
-				<h2 class="col-12 text-center tm-section-title">About Simple House</h2>
-				<p class="col-12 text-center">This is about page of simple house template. 
-                You can modify and use this HTML template for your website. Total 3 HTML pages included in this template. Header image has a parallax effect.</p>
+				<h2 class="col-12 text-center tm-section-title">A Propos de Mon Restaurant</h2>
+				<p class="col-12 text-center">
+					Vous cherchez un restaurant de grande qualité gastronomique,
+					convivial, vous permettant de donner à vos déjeuners et dîners ?
+					<br>
+					Et bien Mon restaurant vous souhaite la Bienvenu.
+				</p>
 			</header>
+			Jennifer Soft
+			about-01.jpg
+			Founder and CEO
+
+			Daisy Walker
+			about-02.jpg
+			Executive Chef
+
+			Florence Nelson
+			about-03.jpg
+			Kitchen Manager
+
+			Valentina Martin
+			about-04.jpg
+			Culinary Director
 
 			<div class="tm-container-inner tm-persons">
 				<div class="row">
+					{% for employer in employes %}
+						<article class="col-lg-6">
+							<figure class="tm-person">
+								<img src="/static/img/" alt="Image" class="img-fluid tm-person-img" />
+								<figcaption class="tm-person-description">
+									<h4 class="tm-person-name">{{employer.nom}} {{employe.prenom}}</h4>
+									<p class="tm-person-title">{{employer.statut}}</p>
+									<p class="tm-person-about">{{employer.description}}</p>
+									<div>
+										<a href="{{employer.facebook}}"  class="tm-social-link"><i class="fab fa-facebook  tm-social-icon"></i></a>
+										<a href="{{employer.twitter}}" 	 class="tm-social-link"><i class="fab fa-twitter 	 tm-social-icon"></i></a>
+										<a href="{{employer.instagram}}" class="tm-social-link"><i class="fab fa-instagram tm-social-icon"></i></a>
+									</div>
+								</figcaption>
+							</figure>
+						</article>
+					{% endfor %}
 					<article class="col-lg-6">
 						<figure class="tm-person">
-							<img src="img/about-01.jpg" alt="Image" class="img-fluid tm-person-img" />
-							<figcaption class="tm-person-description">
-								<h4 class="tm-person-name">Jennifer Soft</h4>
-								<p class="tm-person-title">Founder and CEO</p>
-								<p class="tm-person-about">Vivamus cursus leo nec sem feugiat sagittis.
-								Duis ut feugiat odio, sit amet accumsan
-								odio.</p>
-								<div>
-									<a href="https://fb.com" class="tm-social-link"><i class="fab fa-facebook tm-social-icon"></i></a>
-									<a href="https://twitter.com" class="tm-social-link"><i class="fab fa-twitter tm-social-icon"></i></a>
-									<a href="https://instagram.com" class="tm-social-link"><i class="fab fa-instagram tm-social-icon"></i></a>
-								</div>
-							</figcaption>
-						</figure>
-					</article>
-					<article class="col-lg-6">
-						<figure class="tm-person">
-							<img src="img/about-02.jpg" alt="Image" class="img-fluid tm-person-img" />
+							<img src="/static/img/about-02.jpg" alt="Image" class="img-fluid tm-person-img" />
 							<figcaption class="tm-person-description">
 								<h4 class="tm-person-name">Daisy Walker</h4>
 								<p class="tm-person-title">Executive Chef</p>
@@ -86,9 +105,10 @@ https://templatemo.com/tm-539-simple-house
 							</figcaption>
 						</figure>
 					</article>
+
 					<article class="col-lg-6">
 						<figure class="tm-person">
-							<img src="img/about-03.jpg" alt="Image" class="img-fluid tm-person-img" />
+							<img src="/static/img/about-03.jpg" alt="Image" class="img-fluid tm-person-img" />
 							<figcaption class="tm-person-description">
 								<h4 class="tm-person-name">Florence Nelson</h4>
 								<p class="tm-person-title">Kitchen Manager</p>
@@ -103,7 +123,7 @@ https://templatemo.com/tm-539-simple-house
 					</article>
 					<article class="col-lg-6">
 						<figure class="tm-person">
-							<img src="img/about-04.jpg" alt="Image" class="img-fluid tm-person-img" />
+							<img src="/static/img/about-04.jpg" alt="Image" class="img-fluid tm-person-img" />
 							<figcaption class="tm-person-description">
 								<h4 class="tm-person-name">Valentina Martin</h4>
 								<p class="tm-person-title">Culinary Director</p>
@@ -124,7 +144,7 @@ https://templatemo.com/tm-539-simple-house
 				<div class="row">
 					<div class="col-12">
 						<div class="placeholder-2">
-							<div class="parallax-window-2" data-parallax="scroll" data-image-src="img/about-05.jpg"></div>		
+							<div class="parallax-window-2" data-parallax="scroll" data-image-src="/static/img/about-05.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -135,21 +155,21 @@ https://templatemo.com/tm-539-simple-house
 						<div class="tm-feature">
 							<i class="fas fa-4x fa-pepper-hot tm-feature-icon"></i>
 							<p class="tm-feature-description">Donec sed orci fermentum, convallis lacus id, tempus elit. Sed eu neque accumsan, porttitor arcu a, interdum est. Donec in risus eu ante.</p>
-							<a href="index.html" class="tm-btn tm-btn-primary">Read More</a>
+							<a href="/" class="tm-btn tm-btn-primary">Read More</a>
 						</div>
 					</div>
 					<div class="col-lg-4">
 						<div class="tm-feature">
 							<i class="fas fa-4x fa-seedling tm-feature-icon"></i>
 							<p class="tm-feature-description">Maecenas pretium rutrum molestie. Duis dignissim egestas turpis sit. Nam sed suscipit odio. Morbi in dolor finibus, consequat nisl eget.</p>
-							<a href="index.html" class="tm-btn tm-btn-success">Read More</a>
+							<a href="/" class="tm-btn tm-btn-success">Read More</a>
 						</div>
 					</div>
 					<div class="col-lg-4">
 						<div class="tm-feature">
 							<i class="fas fa-4x fa-cocktail tm-feature-icon"></i>
 							<p class="tm-feature-description">Morbi in dolor finibus, consequat nisl eget, pretium nunc. Maecenas pretium rutrum molestie. Duis dignissim egestas turpis sit.</p>
-							<a href="index.html" class="tm-btn tm-btn-danger">Read More</a>
+							<a href="/" class="tm-btn tm-btn-danger">Read More</a>
 						</div>
 					</div>
 				</div>
@@ -158,25 +178,25 @@ https://templatemo.com/tm-539-simple-house
 				<div class="row">
 					<div class="col-12">
 						<div class="tm-history-inner">
-							<img src="img/about-06.jpg" alt="Image" class="img-fluid tm-history-img" />
-							<div class="tm-history-text"> 
+							<img src="/static/img/about-06.jpg" alt="Image" class="img-fluid tm-history-img" />
+							<div class="tm-history-text">
 								<h4 class="tm-history-title">History of our restaurant</h4>
 								<p class="tm-mb-p">Sed ligula risus, interdum aliquet imperdiet sit amet, auctor sit amet justo. Maecenas posuere lorem id augue interdum vehicula. Praesent sed leo eget libero ultricies congue.</p>
 								<p>Redistributing this template as a downloadable ZIP file on any template collection site is strictly prohibited. You will need to <a href="https://templatemo.com/contact">contact TemplateMo</a> for additional permissions about our templates. Thank you.</p>
 							</div>
-						</div>	
+						</div>
 					</div>
 				</div>
 			</div>
 		</main>
 
 		<footer class="tm-footer text-center">
-			<p>Copyright &copy; 2020 Simple House 
-            
+			<p>Copyright &copy; 2020 Simple House
+
             | Design: <a rel="nofollow" href="https://templatemo.com">TemplateMo</a></p>
 		</footer>
 	</div>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/parallax.min.js"></script>
+	<script src="/static/js/jquery.min.js"></script>
+	<script src="/static/js/parallax.min.js"></script>
 </body>
 </html>
