--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Simple House - Contact Page</title>
+    <title>Contact</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" />
     <link href="/static/css/all.min.css" rel="stylesheet" />
 		<link href="/static/css/templatemo-style.css" rel="stylesheet" />
@@ -23,21 +23,21 @@ https://templatemo.com/tm-539-simple-house
 	<!-- Top box -->
 		<!-- Logo & Site Name -->
 		<div class="placeholder">
-			<div class="parallax-window" data-parallax="scroll" data-image-src="img/simple-house-01.jpg">
+			<div class="parallax-window" data-parallax="scroll" data-image-src="/static/img/simple-house-01.jpg">
 				<div class="tm-header">
 					<div class="row tm-header-inner">
 						<div class="col-md-6 col-12">
-							<img src="img/simple-house-logo.png" alt="Logo" class="tm-site-logo" />
+							<img src="/static/img/simple-house-logo.png" alt="Logo" class="tm-site-logo" />
 							<div class="tm-site-text-box">
-								<h1 class="tm-site-title">Simple House</h1>
-								<h6 class="tm-site-description">new restaurant template</h6>
+								<h1 class="tm-site-title">Notre Restaurant</h1>
+								<h6 class="tm-site-description">adresse de notre restaurant</h6>
 							</div>
 						</div>
 						<nav class="col-md-6 col-12 tm-nav">
 							<ul class="tm-nav-ul">
-								<li class="tm-nav-li"><a href="/" class="tm-nav-link">Accueil</a></li>
-								<li class="tm-nav-li"><a href="/a-propos" class="tm-nav-link">About</a></li>
-								<li class="tm-nav-li"><a href="/contact" class="tm-nav-link active">Contact</a></li>
+								<li class="tm-nav-li"><a href="/" 				class="tm-nav-link">		   Accueil </a></li>
+								<li class="tm-nav-li"><a href="/a-propos" class="tm-nav-link">		   A propos</a></li>
+								<li class="tm-nav-li"><a href="/contact"  class="tm-nav-link active">Contact </a></li>
 							</ul>
 						</nav>
 					</div>
@@ -47,8 +47,11 @@ https://templatemo.com/tm-539-simple-house
 
 		<main>
 			<header class="row tm-welcome-section">
-				<h2 class="col-12 text-center tm-section-title">Contact Page</h2>
-				<p class="col-12 text-center">You may use <a rel="nofollow" href="https://www.ltcclock.com/downloads/simple-contact-form/" target="_blank">Simple Contact Form</a> to send email to your inbox. You can modify and use this template for your website. Header image has a parallax effect. Total 3 HTML pages included in this template.</p>
+				<h2 class="col-12 text-center tm-section-title">Page Contact</h2>
+				<p class="col-12 text-center">
+					Merci de nous <a href="/contact">contacter</a> en nous envoyant un message.
+					Vous pouvez nous poser une question ou alors simplement nous laisser un commentaire.
+				</p>
 			</header>
 
 			<div class="tm-container-inner-2 tm-contact-section">
@@ -56,7 +59,7 @@ https://templatemo.com/tm-539-simple-house
 					<div class="col-md-6">
 						<form action="" method="POST" class="tm-contact-form">
 					        <div class="form-group">
-					          <input type="text" name="name" class="form-control" placeholder="Name" required="" />
+					          <input type="text" name="nom" class="form-control" placeholder="Nom" required="" />
 					        </div>
 
 					        <div class="form-group">
@@ -69,25 +72,25 @@ https://templatemo.com/tm-539-simple-house
 
 					        <div class="form-group tm-d-flex">
 					          <button type="submit" class="tm-btn tm-btn-success tm-btn-right">
-					            Send
+					            Envoyer
 					          </button>
 					        </div>
 						</form>
 					</div>
 					<div class="col-md-6">
 						<div class="tm-address-box">
-							<h4 class="tm-info-title tm-text-success">Our Address</h4>
+							<h4 class="tm-info-title tm-text-success">Notre Adresse</h4>
 							<address>
-								180 Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus 10550
+								FST de Settat, Km 3, B.P. : 577 Route de Casablanca
 							</address>
 							<a href="tel:080-090-0110" class="tm-contact-link">
-								<i class="fas fa-phone tm-contact-icon"></i>080-090-0110
+								<i class="fas fa-phone tm-contact-icon"></i> 052-340-0736
 							</a>
 							<a href="mailto:info@company.co" class="tm-contact-link">
-								<i class="fas fa-envelope tm-contact-icon"></i>info@company.co
+								<i class="fas fa-envelope tm-contact-icon"></i>contact_fsts@uhp.ac.ma
 							</a>
 							<div class="tm-contact-social">
-								<a href="https://fb.com/templatemo" class="tm-social-link"><i class="fab fa-facebook tm-social-icon"></i></a>
+								<a href="https://web.facebook.com/settat.fst" class="tm-social-link"><i class="fab fa-facebook tm-social-icon"></i></a>
 								<a href="#" class="tm-social-link"><i class="fab fa-twitter tm-social-icon"></i></a>
 								<a href="#" class="tm-social-link"><i class="fab fa-instagram tm-social-icon"></i></a>
 							</div>
@@ -116,26 +119,46 @@ https://templatemo.com/tm-539-simple-house
 					<!-- FAQ -->
 					<div class="col-12 tm-faq">
 						<h2 class="text-center tm-section-title">FAQs</h2>
-						<p class="text-center">This section comes with Accordion tabs for different questions and answers about Simple House HTML CSS template. Thank you. #666</p>
+						<p class="text-center">
+							Voici une selection de questions qui pourrait vous aider :
+							N'hesiter pas a nous envoyer plus de questions.
+						</p>
 						<div class="tm-accordion">
-							<button class="accordion">1. Fusce eu lorem et dui #09C maximus varius?</button>
+							<button class="accordion">1. La cuisine du restaurant est-elle gérée par des etudiants ?</button>
 							<div class="panel">
-							  <p>#666 Duis blandit purus vel nenenatis rutrum. Pellentesque pellentesque tindicunt lorem, ac egestas massa sollicitudin vel. Nam scelerisque vulputate quam mollis pretium. Morbi condimentum volutpat.</p>
+							  <p>
+									Non.
+									Notre restaurant offre une expérience gastronomique réalisée par une équipe de cuisine professionnelle de haut niveau.
+									Bien que les étudiants ont la possibilité de venir observer le Chef et son équipe en action,
+									tout le travail est réalisé par une équipe culinaire qualifiée et expérimentée dont chaque membre a été sélectionné personnellement pour son poste.
+								</p>
 							</div>
 
-							<button class="accordion">2. Vestibulum #999 ante ipsum primis in faucibus orci?</button>
+							<button class="accordion">2. Peut-on organiser un mariage ou autre événement ?</button>
 							<div class="panel">
-							  <p>Mauris euismod odio at commodo rhoncus. Maecenas nec interdum purus, sed auctor est. Sed eleifend urna nec diam consectetur, a aliquet turpis facilisis. Integer est sapien, sagittis vel massa vel, interdum euismod erat. Aenean sollicitudin nisi neque, efficitur posuere urna rutrum porta.</p>
+							  <p>
+									Oui ! Notre restaurant est le cadre idéal pour un mariage ainsi que pour un événement d’entreprise,
+									une fête privée et toute autre réception.
+									Nous pouvons accommoder plusieurs tailles d’événement et nous sommes adaptables en termes de menu,
+									horaire ainsi que de format de réception – que ce soit une soirée cocktail ou un dîner avec service à l’assiette.
+									Pour plus d’information, veuillez consulter <a href="/contact">notre page Événements</a> (lien en haut à droite).
+								</p>
 							</div>
 
-							<button class="accordion">3. Can I redistribute this template as a ZIP file?</button>
+							<button class="accordion">3. Y-a-t'il une terasse au restaurant ?</button>
 							<div class="panel">
-							  <p>Redistributing this template as a downloadable ZIP file on any template collection site is strictly prohibited. You will need to <a href="https://templatemo.com/contact">contact TemplateMo</a> for additional permissions about our templates. Thank you.</p>
+							  <p>
+									Oui ! Notre terrasse, située à l’est du manoir, vous accueille au printemps, en été et en automne
+									(lorsque les conditions le permettent, évidemment).
+									Suivez-nous sur les réseaux sociaux pour être au courant des évènements ainsi que de l’ouverture de la terrasse.
+								</p>
 							</div>
 
-							<button class="accordion">4. Ut ac erat sit amet neque efficitur faucibus et in lectus?</button>
+							<button class="accordion">4. Est-il possible de visiter les lieux ?</button>
 							<div class="panel">
-								<p>Vivamus viverra pretium ultricies. Praesent feugiat, sapien vitae blandit efficitur, sem nulla venenatis nunc, vel maximus ligula sem a sem. Pellentesque ligula ex, facilisis ac libero a, blandit ullamcorper enim.</p>
+								<p>
+									Les visites du bâtiment ainsi que des différentes cuisines et installations sont possibles.
+								</p>
 							</div>
 						</div>
 					</div>
