--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -29,8 +29,8 @@ https://templatemo.com/tm-539-simple-house
 						<div class="col-md-6 col-12">
 							<img src="/static/img/simple-house-logo.png" alt="Logo" class="tm-site-logo" />
 							<div class="tm-site-text-box">
-								<h1 class="tm-site-title">Mon Restaurant</h1>
-								<h6 class="tm-site-description">new restaurant template</h6>
+								<h1 class="tm-site-title">Notre Restaurant</h1>
+								<h6 class="tm-site-description">adresse de notre restaurant</h6>
 							</div>
 						</div>
 						<nav class="col-md-6 col-12 tm-nav">
@@ -51,93 +51,49 @@ https://templatemo.com/tm-539-simple-house
 				<p class="col-12 text-center">
 					Vous cherchez un restaurant de grande qualité gastronomique,
 					convivial, vous permettant de donner à vos déjeuners et dîners ?
-					<br>
-					Et bien Mon restaurant vous souhaite la Bienvenu.
 				</p>
 			</header>
-			Jennifer Soft
-			about-01.jpg
-			Founder and CEO
 
-			Daisy Walker
-			about-02.jpg
-			Executive Chef
-
-			Florence Nelson
-			about-03.jpg
-			Kitchen Manager
-
-			Valentina Martin
-			about-04.jpg
-			Culinary Director
 
 			<div class="tm-container-inner tm-persons">
 				<div class="row">
-					{% for employer in employes %}
-						<article class="col-lg-6">
+					{% for employe in employes %}
+						<article class="col-lg-6" >
 							<figure class="tm-person">
-								<img src="/static/img/" alt="Image" class="img-fluid tm-person-img" />
+								<img src="/static/img/{{employe.image}}" alt="Image" class="img-fluid tm-person-img" />
 								<figcaption class="tm-person-description">
-									<h4 class="tm-person-name">{{employer.nom}} {{employe.prenom}}</h4>
-									<p class="tm-person-title">{{employer.statut}}</p>
-									<p class="tm-person-about">{{employer.description}}</p>
+									<h4 class="tm-person-name">{{employe.nom}} {{employe.prenom}}</h4>
+									<p class="tm-person-title">{{employe.statut}}</p>
+									<p class="tm-person-about">{{employe.description}}</p>
 									<div>
-										<a href="{{employer.facebook}}"  class="tm-social-link"><i class="fab fa-facebook  tm-social-icon"></i></a>
-										<a href="{{employer.twitter}}" 	 class="tm-social-link"><i class="fab fa-twitter 	 tm-social-icon"></i></a>
-										<a href="{{employer.instagram}}" class="tm-social-link"><i class="fab fa-instagram tm-social-icon"></i></a>
+										{% if employe.facebook %}
+											<a href="{{employe.facebook}}"  class="tm-social-link">
+												<i class="fab fa-facebook  tm-social-icon"></i>
+											</a>
+										{% endif %}
+
+										{% if employe.twitter %}
+											<a href="{{employe.twitter}}" 	class="tm-social-link">
+												<i class="fab fa-twitter 	tm-social-icon"></i>
+											</a>
+										{% endif %}
+
+										{% if employe.instagram %}
+										<a href="{{employe.instagram}}" class="tm-social-link">
+											<i class="fab fa-instagram tm-social-icon"></i>
+										</a>
+										{% endif %}
+
+										{% if employe.youtube %}
+										<a href="" class="tm-social-link">
+											<i class="fab fa-youtube tm-social-icon"></i>
+										</a>
+										{% endif %}
 									</div>
 								</figcaption>
 							</figure>
 						</article>
 					{% endfor %}
-					<article class="col-lg-6">
-						<figure class="tm-person">
-							<img src="/static/img/about-02.jpg" alt="Image" class="img-fluid tm-person-img" />
-							<figcaption class="tm-person-description">
-								<h4 class="tm-person-name">Daisy Walker</h4>
-								<p class="tm-person-title">Executive Chef</p>
-								<p class="tm-person-about">Praesent non vulputate elit. Orci varius
-								natoque et magnis dis parturient, nascetur ridiculus mus.</p>
-								<div>
-									<a href="https://fb.com" class="tm-social-link"><i class="fab fa-facebook tm-social-icon"></i></a>
-									<a href="https://twitter.com" class="tm-social-link"><i class="fab fa-twitter tm-social-icon"></i></a>
-								</div>
-							</figcaption>
-						</figure>
-					</article>
-
-					<article class="col-lg-6">
-						<figure class="tm-person">
-							<img src="/static/img/about-03.jpg" alt="Image" class="img-fluid tm-person-img" />
-							<figcaption class="tm-person-description">
-								<h4 class="tm-person-name">Florence Nelson</h4>
-								<p class="tm-person-title">Kitchen Manager</p>
-								<p class="tm-person-about">Aenean sapien sem, ultricies sed vulputate
-								et, auctor vel mauris. Integer sit amet diam eget est facilisis lacinia vitae.</p>
-								<div>
-									<a href="https://fb.com" class="tm-social-link"><i class="fab fa-facebook tm-social-icon"></i></a>
-									<a href="https://instagram.com" class="tm-social-link"><i class="fab fa-instagram tm-social-icon"></i></a>
-								</div>
-							</figcaption>
-						</figure>
-					</article>
-					<article class="col-lg-6">
-						<figure class="tm-person">
-							<img src="/static/img/about-04.jpg" alt="Image" class="img-fluid tm-person-img" />
-							<figcaption class="tm-person-description">
-								<h4 class="tm-person-name">Valentina Martin</h4>
-								<p class="tm-person-title">Culinary Director</p>
-								<p class="tm-person-about">Praesent non vulputate elit. Orci varius
-								natoque penatibus et magnis montes, nascetur ridiculus mus.</p>
-								<div>
-									<a href="https://fb.com" class="tm-social-link"><i class="fab fa-facebook tm-social-icon"></i></a>
-									<a href="https://twitter.com" class="tm-social-link"><i class="fab fa-twitter tm-social-icon"></i></a>
-									<a href="https://instagram.com" class="tm-social-link"><i class="fab fa-instagram tm-social-icon"></i></a>
-									<a href="https://youtube.com" class="tm-social-link"><i class="fab fa-youtube tm-social-icon"></i></a>
-								</div>
-							</figcaption>
-						</figure>
-					</article>
 				</div>
 			</div>
 			<div class="tm-container-inner tm-featured-image">
@@ -154,22 +110,28 @@ https://templatemo.com/tm-539-simple-house
 					<div class="col-lg-4">
 						<div class="tm-feature">
 							<i class="fas fa-4x fa-pepper-hot tm-feature-icon"></i>
-							<p class="tm-feature-description">Donec sed orci fermentum, convallis lacus id, tempus elit. Sed eu neque accumsan, porttitor arcu a, interdum est. Donec in risus eu ante.</p>
-							<a href="/" class="tm-btn tm-btn-primary">Read More</a>
+							<p class="tm-feature-description">
+								Les épices sont utilisées en petite quantité en cuisine, comme conservateur, assaisonnement ou colorant.
+							</p>
+							<a href="/" class="tm-btn tm-btn-danger">En savoir plus</a>
 						</div>
 					</div>
 					<div class="col-lg-4">
 						<div class="tm-feature">
 							<i class="fas fa-4x fa-seedling tm-feature-icon"></i>
-							<p class="tm-feature-description">Maecenas pretium rutrum molestie. Duis dignissim egestas turpis sit. Nam sed suscipit odio. Morbi in dolor finibus, consequat nisl eget.</p>
-							<a href="/" class="tm-btn tm-btn-success">Read More</a>
+							<p class="tm-feature-description">
+								Mangez bien, mangez mieux, mangez ensemble avec les plats cuisinés biologiques finement cuisinés. nos plats préparés en un clin d'oeil.
+							</p>
+							<a href="/" class="tm-btn tm-btn-success">En savoir plus</a>
 						</div>
 					</div>
 					<div class="col-lg-4">
 						<div class="tm-feature">
 							<i class="fas fa-4x fa-cocktail tm-feature-icon"></i>
-							<p class="tm-feature-description">Morbi in dolor finibus, consequat nisl eget, pretium nunc. Maecenas pretium rutrum molestie. Duis dignissim egestas turpis sit.</p>
-							<a href="/" class="tm-btn tm-btn-danger">Read More</a>
+							<p class="tm-feature-description">
+								Boisson naturelle riche en antioxydants, qui contient du jus de mandarine, du thé vert, ainsi que des extraits de baies de goji
+							</p>
+							<a href="/" class="tm-btn tm-btn-primary">En savoir plus</a>
 						</div>
 					</div>
 				</div>
@@ -181,8 +143,13 @@ https://templatemo.com/tm-539-simple-house
 							<img src="/static/img/about-06.jpg" alt="Image" class="img-fluid tm-history-img" />
 							<div class="tm-history-text">
 								<h4 class="tm-history-title">History of our restaurant</h4>
-								<p class="tm-mb-p">Sed ligula risus, interdum aliquet imperdiet sit amet, auctor sit amet justo. Maecenas posuere lorem id augue interdum vehicula. Praesent sed leo eget libero ultricies congue.</p>
-								<p>Redistributing this template as a downloadable ZIP file on any template collection site is strictly prohibited. You will need to <a href="https://templatemo.com/contact">contact TemplateMo</a> for additional permissions about our templates. Thank you.</p>
+								<p class="tm-mb-p">
+									Le plus vieux restaurant de la ville, depuis les années 60 rien n'a changé, le service est toujours de qualité.
+								</p>
+								<p>
+									Aujourd’hui et après plus de 25 ans de présence dans le domaine de la rastauration,
+									Mon Restaurant est l’enseigne de restauration préférée des habitants de la ville.
+									N'hesitez pas a <a href="/contact">nous contacter</a> pour avoir plus d'informations. Merci.</p>
 							</div>
 						</div>
 					</div>
