--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,14 +47,14 @@ https://templatemo.com/tm-539-simple-house
 						<nav class="col-md-6 col-12 tm-nav">
 							<ul class="tm-nav-ul">
 								<li class="tm-nav-li"><a href="/" class="tm-nav-link active">Accueil </a></li>
-								<li class="tm-nav-li"><a href="/a-propos" class="tm-nav-link">A Propos</a></li>
+								<li class="tm-nav-li" style="white-space: pre;"><a href="/a-propos" class="tm-nav-link">A Propos</a></li>
 								<li class="tm-nav-li"><a href="/contact" class="tm-nav-link">Contact </a></li>
 
 								{% set produits = 4 %}
 								<li class="tm-nav-li">
-									<a href="/panier" class="tm-nav-link">
-										<i class="fa fa-shopping-cart" aria-hidden="true"></i> &nbsp;
+									<a href="/panier" class="tm-nav-link" style="text-wrap: nowrap;" >
 										Panier ({{produits}})
+										<i class="fa fa-shopping-cart" aria-hidden="true"></i>
 									</a>
 								</li>
 							</ul>
