diagramme et fichier sql

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -34,7 +34,7 @@ https://templatemo.com/tm-539-simple-house
 							</div>
 						</div>
 						<nav class="col-md-6 col-12 tm-nav">
-							<ul class="tm-nav-ul">
+							<ul class="tm-nav-ul" style="white-space: nowrap;">
 								<li class="tm-nav-li"><a href="/" 				class="tm-nav-link">       Accueil </a></li>
 								<li class="tm-nav-li"><a href="/a-propos" class="tm-nav-link active">A propos</a></li>
 								<li class="tm-nav-li"><a href="/contact"  class="tm-nav-link">			 Contact </a></li>
