--- a/app/templates/panier.html
+++ b/app/templates/panier.html
@@ -30,9 +30,9 @@ https://templatemo.com/tm-539-simple-house
 
 -->
 
-<body>
+<body style="overflow:auto;">
 
-	<div class="container-fluid p-10" style="min-width: 50em;">
+	<div class="container p-0" style="min-width: 50em; " > <!-- style="min-width: 50em;" -->
 		<!-- Top box -->
 
 		<!-- Logo & Site Name -->
@@ -48,7 +48,7 @@ https://templatemo.com/tm-539-simple-house
 							</div>
 						</div>
 						<nav class="col-md-6 col-12 tm-nav">
-							<ul class="tm-nav-ul">
+							<ul class="tm-nav-ul" style="white-space: nowrap;">
 								<li class="tm-nav-li"><a href="/" class="tm-nav-link active">Accueil </a></li>
 								<li class="tm-nav-li"><a href="/a-propos" class="tm-nav-link">A Propos</a></li>
 								<li class="tm-nav-li"><a href="/contact" class="tm-nav-link">Contact </a></li>
@@ -103,7 +103,7 @@ https://templatemo.com/tm-539-simple-house
 	        <h2>Panier</h2>
 	      </div>
 	      <div class="card-body">
-	        <div class="table-responsive">
+	        <div class="table-responsive"> <!-- class="table-responsive" -->
 	          <table class="table table-bordered m-0">
 	            <thead>
 	              <tr>
